# Y4S2-Embedded-Systems-Programming

Assignment 01/: Report.docx  ~$Report.docx
Assignment 01/sprites-scroll-lab/sprites-scroll-lab/: mk  t.c  t.elf  timer.c  uart.c  vid.c
Project 01/Project - Part A/: CMakeLists.txt  Report.docx
Project 01/Project - Part A/editor1/: crc16_ccitt.c  defines.h  exceptions.c  string.c  t.c  t.elf  uart.c  vid.c  xmodem.c
